--- a/Proyecto final/Proyecto final - Don Lee/src/sample/sample2.fxml
+++ b/Proyecto final/Proyecto final - Don Lee/src/sample/sample2.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
@@ -28,60 +28,60 @@
             </Label>
             <ImageView fitHeight="127.0" fitWidth="152.0" layoutX="35.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Pictures/Clan%201.PNG" />
+                  <Image url="@Clan%201.PNG" />
                </image>
             </ImageView>
             <ImageView fitHeight="113.0" fitWidth="200.0" layoutX="267.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Pictures/Clan%202.PNG" />
+                  <Image url="@Clan%202.PNG" />
                </image>
             </ImageView>
             <ImageView fitHeight="142.0" fitWidth="153.0" layoutX="491.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Pictures/Clan%203.PNG" />
+                  <Image url="@Clan%203.PNG" />
                </image>
             </ImageView>
             <ImageView fitHeight="121.0" fitWidth="152.0" layoutX="35.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Pictures/Clan%204.PNG" />
+                  <Image url="@Clan%204.PNG" />
                </image>
             </ImageView>
             <ImageView fitHeight="111.0" fitWidth="177.0" layoutX="266.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Pictures/Clan%205.PNG" />
+                  <Image url="@Clan%205.PNG" />
                </image>
             </ImageView>
             <ImageView fitHeight="128.0" fitWidth="152.0" layoutX="492.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Pictures/Clan%206.PNG" />
+                  <Image url="@Clan%206.PNG" />
                </image>
             </ImageView>
-            <Button fx:id="agregar1" layoutX="79.0" layoutY="197.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
+            <Button fx:id="agregar1" layoutX="47.0" layoutY="201.0" mnemonicParsing="false" onAction="#agregar1" prefHeight="30.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
                <font>
                   <Font name="Segoe Print" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="agregar2" layoutX="311.0" layoutY="200.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
+            <Button fx:id="agregar2" layoutX="279.0" layoutY="200.0" mnemonicParsing="false" onAction="#agregar2" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
                <font>
                   <Font name="Segoe Print" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="agregar3" layoutX="536.0" layoutY="200.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
+            <Button fx:id="agregar3" layoutX="504.0" layoutY="200.0" mnemonicParsing="false" onAction="#agregar3" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
                <font>
                   <Font name="Segoe Print" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="agregar4" layoutX="79.0" layoutY="386.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
+            <Button fx:id="agregar4" layoutX="47.0" layoutY="386.0" mnemonicParsing="false" onAction="#agregar4" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
                <font>
                   <Font name="Segoe Print" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="agregar5" layoutX="311.0" layoutY="386.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
+            <Button fx:id="agregar5" layoutX="279.0" layoutY="386.0" mnemonicParsing="false" onAction="#agregar5" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
                <font>
                   <Font name="Segoe Print" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="agregar6" layoutX="536.0" layoutY="386.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
+            <Button fx:id="agregar6" layoutX="504.0" layoutY="386.0" mnemonicParsing="false" onAction="#agregar6" prefHeight="18.0" prefWidth="65.0" style="-fx-background-color: F7B572;" text="Agregar">
                <font>
                   <Font name="Segoe Print" size="12.0" />
                </font>
@@ -116,6 +116,13 @@
                   <Font name="Segoe Script" size="12.0" />
                </font>
             </Label>
+            <Label layoutX="133.0" layoutY="207.0" text="7.95" textFill="RED" />
+            <Label layoutX="365.0" layoutY="208.0" text="7.85" textFill="RED" />
+            <Label layoutX="601.0" layoutY="207.0" text="8.05" textFill="RED" />
+            <Label layoutX="133.0" layoutY="393.0" text="7.25" textFill="RED" />
+            <Label layoutX="365.0" layoutY="393.0" text="7.65" textFill="RED" />
+            <Label layoutX="590.0" layoutY="393.0" />
+            <Label layoutX="601.0" layoutY="393.0" text="6.75" textFill="RED" />
          </children>
       </Pane>
    </children>
