--- a/Proyecto final/Proyecto final - Don Lee/src/sample/sample3.fxml
+++ b/Proyecto final/Proyecto final - Don Lee/src/sample/sample3.fxml
@@ -3,15 +3,13 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.Glow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller3">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -19,9 +17,9 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Pane prefHeight="263.0" prefWidth="314.0" style="-fx-background-color: #FFFEFD;">
+      <Pane prefHeight="382.0" prefWidth="314.0" style="-fx-background-color: #FFFEFD;">
          <children>
-            <Button fx:id="ordenar" alignment="TOP_LEFT" layoutX="106.0" layoutY="149.0" mnemonicParsing="false" onAction="#ordenar" prefHeight="35.0" prefWidth="104.0" style="-fx-background-color: F7B572;" text="ORDENAR" textAlignment="CENTER" textOverrun="CLIP">
+            <Button fx:id="ordenar" alignment="TOP_LEFT" layoutX="204.0" layoutY="310.0" mnemonicParsing="false" onAction="#ordenar" prefHeight="30.0" prefWidth="57.0" style="-fx-background-color: F7B572;" text="Pagar" textAlignment="CENTER" textOverrun="CLIP">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -29,10 +27,10 @@
                   <Glow />
                </effect>
                <font>
-                  <Font name="Segoe Print" size="14.0" />
+                  <Font name="Segoe Print" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="salir" layoutX="120.0" layoutY="201.0" mnemonicParsing="false" onAction="#salir" prefHeight="25.0" prefWidth="71.0" style="-fx-background-color: F7B572;" text="SALIR">
+            <Button fx:id="salir" layoutX="60.0" layoutY="310.0" mnemonicParsing="false" onAction="#salir" prefHeight="30.0" prefWidth="82.0" style="-fx-background-color: F7B572;" text="Cancelar">
                <effect>
                   <Glow />
                </effect>
@@ -43,11 +41,6 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ImageView fitHeight="128.0" fitWidth="200.0" layoutX="58.0" layoutY="14.0" pickOnBounds="true">
-               <image>
-                  <Image url="@DonLee.jpg" />
-               </image>
-            </ImageView>
          </children>
       </Pane>
    </children>
